# macro-event-ml-trading-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/contracts/: pipeline_stage_contract.md
scripts/: run_pipeline.py
src/engine/backtest/: engine.py  schemas.py
src/engine/data/: interfaces.py  loader.py
src/engine/derivatives/: overlay.py  schemas.py
src/engine/events/: builder.py  schemas.py
src/engine/experts/: base.py  mock_expert.py  registry.py  schemas.py
src/engine/expression/: schemas.py  selector.py
src/engine/features/: builder.py  schemas.py
src/engine/meta/: schemas.py  stacker.py
src/engine/portfolio/: optimizer.py  schemas.py
src/engine/universe/: registry.py  schemas.py
tests/: test_pipeline_smoke.py
